--- a/ps/index.html
+++ b/ps/index.html
@@ -82,7 +82,7 @@
 <div class="black">
 <div id="primeira">
 <div class="question">
-<h1>Pergunta 1</h1>
+<h1>Questão 1</h1>
 <p>Você realmente quer descobrir esse segredo?</p>
 </div>
 <div class="answer">
@@ -92,7 +92,7 @@
 </div>
 <div id="segunda" class="hide">
 <div class="question">
-<h1>Pergunta 2</h1>
+<h1>Questão 2</h1>
 <p>Você promete prestar atenção em tudo que for transmitido?</p>
 </div>
 <div class="answer">
@@ -102,7 +102,7 @@
 </div>
 <div id="terceira" class="hide">
 <div class="question">
-<h1>Pergunta 3</h1>
+<h1>Questão 3</h1>
 <p>O vídeo a seguir tem um limite de pessoas que podem assistir ao mesmo tempo. Você pretende assistir até o fim?</p>
 </div>
 <div class="answer">
