--- a/ps/index.html
+++ b/ps/index.html
@@ -103,7 +103,7 @@
 <div id="terceira" class="hide">
 <div class="question">
 <h1>Questão 3</h1>
-<p>O vídeo a seguir tem um limite de pessoas que podem assistir ao mesmo tempo. Você pretende assistir até o fim?</p>
+<p>O vídeo a seguir tem um limite de mulheres que podem assistir ao mesmo tempo... Você pretende assistir até o fim?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="redirect()">SIM</button>
