--- a/ps/index.html
+++ b/ps/index.html
@@ -93,7 +93,7 @@
 <div id="segunda" class="hide">
 <div class="question">
 <h1>Questão 2</h1>
-<p>Você promete prestar atenção em tudo que for transmitido?</p>
+<p>Você promete que não vai revelar este método para ninguém, e nem usá-lo para brincar com os sentimentos de homens?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="terceira()">SIM</button>
