--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Barriga</title>
+    <title>Método da Atração</title>
     
     <style type="text/css">
       body {
@@ -57,11 +57,10 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
+            <h3 class="my-4"><b>Conquiste Qualquer Homem Com Apenas Isto!</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6241e0be752ce700088945e1">var s=document.createElement("script");s.src="https://cdn.converteai.net/870edb33-cd8b-434c-af0d-adc00ba7b211/players/6241e0be752ce700088945e1/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <script type="text/javascript" id="scr_62473e5434cf0a000a83a28e">var s=document.createElement("script");s.src="https://cdn.converteai.net/870edb33-cd8b-434c-af0d-adc00ba7b211/players/62473e5434cf0a000a83a28e/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/xmKLkeB" class="a-btn" style="text-decoration: none;">
