--- a/ps/index.html
+++ b/ps/index.html
@@ -142,7 +142,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://protocolozerobarrigas.online"
+      location.href = "https://protocolozerobarrigas.site"
     }
   </script>
 </body>
