--- a/ps/index.html
+++ b/ps/index.html
@@ -101,7 +101,7 @@
 <div class="black">
 <div id="primeira">
 <div class="question">
-<h1>Questão 1</h1>
+<h1>Opção 1</h1>
 <p>Você realmente quer descobrir esse segredo?</p>
 </div>
 <div class="answer">
@@ -111,7 +111,7 @@
 </div>
 <div id="segunda" class="hide">
 <div class="question">
-<h1>Questão 2</h1>
+<h1>Opção 2</h1>
 <p>Você promete que não vai revelar este método para ninguém, e nem usá-lo para brincar com os sentimentos de homens?</p>
 </div>
 <div class="answer">
@@ -121,7 +121,7 @@
 </div>
 <div id="terceira" class="hide">
 <div class="question">
-<h1>Questão 3</h1>
+<h1>Opção 3</h1>
 <p>O vídeo a seguir tem um limite de mulheres que podem assistir ao mesmo tempo... Você pretende assistir até o fim?</p>
 </div>
 <div class="answer">
