--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <script type="text/javascript" id="scr_62473e5434cf0a000a83a28e">var s=document.createElement("script");s.src="https://cdn.converteai.net/870edb33-cd8b-434c-af0d-adc00ba7b211/players/62473e5434cf0a000a83a28e/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/xmKLkeB" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/p8qb0GV" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO ACESSO AGORA!</span>
                 <span class="span-btn2">(Atenção: Vagas Limitadas)</span>
               </a>
